--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,8 +9,10 @@ $base-line-height: 1.5;
 /* colors */
 $text-color:       #555;
 $background-color: #fff;
-$link-color:       yellowgreen;
-$selection-color:  lightblue;
+$brand-color:      #004A83;
+$brand-color-light:#98BCDB;
+$link-color:       #004A83;
+$selection-color:  #efefef;
 
 $content-width:    40em;
 $spacing-unit:     1.5em;
@@ -18,6 +20,7 @@ $spacing-unit:     1.5em;
 @import
   "normalize",
   "base",
+  "animations",
   "components",
   "patterns",
   "mediaqueries",
